# fnord

./: .gitignore  CLEANUP_README.md  POSTGRES_SETUP.md  README.md  pyproject.toml
fnord/: __init__.py  __main__.py  cli.py  config.py  database.py  embeddings.py  mcp_server.py  models.py  tui.py
fnord/web/: README.md  __init__.py  __main__.py  app.py
fnord/web/templates/: detail.html  fnord_card.html  list.html
scripts/: cleanup_test_fnords.py  migrate_to_postgres.py
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_mcp_server.py  test_models.py  test_tui.py  test_tui_integration.py
