[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnord-tracker"
version = "23.5.0"
description = "A fnord tracking service for the discerning Discordian"
readme = "README.md"
license = {text = "WTFPL - Do What The Fuck You Want To Public License"}
authors = [
    {name = "The Fnord Keepers", email = "fnord@eris.garden"}
]
 keywords = ["fnord", "discordian", "illuminatus", "tracker", "mcp", "cli", "web"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
  dependencies = [
      # MCP for AI integration (fnords speak to machines too!)
      "mcp",

      # Typer for CLI (23 command lines, naturally)
      "typer",

      # Dotenv for config (23 config locations)
      "python-dotenv",

      # Web framework for modern UI (fnords deserve cool web interface)
      "fastapi",
      "jinja2",
      "uvicorn",

      # PostgreSQL async driver (fnords need a proper database)
      "asyncpg>=0.29.0",

      # pgvector extension for semantic search (vector similarity!)
      "pgvector>=0.3.0",

      # LM Studio compatibility (OpenAI-compatible API)
      "openai>=1.12.0",
  ]

[project.optional-dependencies]
dev = [
    # Testing (fnords must be tested rigorously)
    "pytest",
    "pytest-asyncio",
    "pytest-cov",

    # Code quality (fnords hate ugly code)
    "ruff",
    "mypy",
]

[project.scripts]
fnord = "fnord.__main__:main"

[project.urls]
Homepage = "https://fnord.tracker"
Documentation = "https://docs.fnord.tracker"
Repository = "https://github.com/fnord/fnord-tracker"
"Illuminati Membership" = "https://23.skidoo"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnord*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=fnord",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # __init__ files get exemptions, fnord says so

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
